// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popovers/innovative should add custom className 1`] = `
<div
  className="popover custom print"
  onClick={[Function]}
  style={Object {}}
>
  <h1>
    AWESOME
  </h1>
  <p>
    
  </p>
</div>
`;

exports[`popovers/innovative should add custom style 1`] = `
<div
  className="popover print"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <h1>
    AWESOME
  </h1>
  <p>
    
  </p>
</div>
`;

exports[`popovers/innovative should have a default behaviour 1`] = `
<div
  className="popover print"
  onClick={[Function]}
  style={Object {}}
>
  <h1>
    AWESOME
  </h1>
  <p>
    
  </p>
</div>
`;

exports[`popovers/innovative should not print 1`] = `
<div
  className="popover"
  onClick={[Function]}
  style={Object {}}
>
  <h1>
    AWESOME
  </h1>
  <p>
    
  </p>
</div>
`;
